# time_sheet_calculator

./: .gitignore  README.md  TimeSheetCalculator.spec  pyproject.toml
.agent_info/: code_style_guide.md  project_plan.md  testing.md  time_sheet_calculator_design_doc.md
assets/: timesheet_calculator_icon.icns
src/: about.md  about_content.py  app.py  timesheet_service.py  ui_view_model.py
tests/: test_app_ui.py  test_smoke.py  test_timesheet_service.py  test_ui_view_model.py
tools/: build.ps1  build.sh  generate_about_content.py  package.ps1  package.sh  pytest_run_coverage.sh
